[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/phys_player_body.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/phys_player_forearm.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/phys_player_upparm.glb" type="PackedScene" id=3]
[ext_resource path="res://PhysPlayer.gd" type="Script" id=4]
[ext_resource path="res://assets/smiley.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/punch1.tres" type="AudioStream" id=6]
[ext_resource path="res://assets/textures/Float1.tres" type="TextMesh" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.5093, 1.84679, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.41199, 1.73672, 1 )

[sub_resource type="CubeMesh" id=5]

[sub_resource type="BoxShape" id=6]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.917983, 0.398559, 0.348864 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.874499, 0.312815, 0.27705 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.05296, 1.00535, 0.987462 )

[node name="PhysPlayer" type="KinematicBody"]
script = ExtResource( 4 )

[node name="SFXPhysPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.41536, 0.00160456 )
shape = SubResource( 1 )
disabled = true

[node name="body" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16358, 0 )
shape = SubResource( 2 )

[node name="phys_player_body" parent="body" instance=ExtResource( 1 )]

[node name="head" type="StaticBody" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.74793, 0 )

[node name="MeshInstance" type="MeshInstance" parent="body/head"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.000205278, 0.00732088, 0.000376463 )
mesh = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="body/head"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 6 )

[node name="Sprite3D" type="Sprite3D" parent="body/head"]
transform = Transform( 0.805965, 0, 0, 0, 0.720089, 0, 0, 0, 1, -0.0556621, 0, 0.511509 )
texture = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="body"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 2, 0, 5, 0 )
mesh = ExtResource( 7 )

[node name="upperarm_l" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88084, 2.39095, 0.0213131 )

[node name="CollisionShape" type="CollisionShape" parent="upperarm_l"]
shape = SubResource( 3 )

[node name="phys_player_upparm" parent="upperarm_l" instance=ExtResource( 3 )]
transform = Transform( 1.0023, 0, 0, 0, 1.0023, 0, 0, 0, 1.0023, 0, 0, 0 )

[node name="forearm_l" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.1689, 2.40215, -0.0114748 )

[node name="CollisionShape" type="CollisionShape" parent="forearm_l"]
shape = SubResource( 4 )

[node name="phys_player_forearm" parent="forearm_l" instance=ExtResource( 2 )]

[node name="hand_l" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.98603, 2.38299, -0.0250816 )
collision_layer = 2
collision_mask = 0
mass = 9.23

[node name="MeshInstance" type="MeshInstance" parent="hand_l"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="hand_l"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 6 )

[node name="HandLCollision" type="Area" parent="hand_l"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00726366, -0.0363104 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="hand_l/HandLCollision"]
shape = SubResource( 7 )

[node name="FOREARML->HANDL" type="PinJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.30727, 2.38672, 0 )
nodes/node_a = NodePath("../forearm_l")
nodes/node_b = NodePath("../hand_l")

[node name="BODY->UPPERL" type="PinJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73153, 2.41488, 0 )
nodes/node_a = NodePath("../body")
nodes/node_b = NodePath("../upperarm_l")
collision/exclude_nodes = false

[node name="UPPERL-FOREARML" type="PinJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.01132, 2.47209, 0 )
nodes/node_a = NodePath("../upperarm_l")
nodes/node_b = NodePath("../forearm_l")

[node name="upperarm_r" type="RigidBody" parent="."]
transform = Transform( -1, 0.000715645, 0, -0.000715645, -1, 0, 0, 0, 1, -3.1166, 2.43116, -0.00376856 )

[node name="CollisionShape" type="CollisionShape" parent="upperarm_r"]
shape = SubResource( 3 )

[node name="phys_player_upparm" parent="upperarm_r" instance=ExtResource( 3 )]

[node name="forearm_r" type="RigidBody" parent="."]
transform = Transform( -1, 0.000715645, 0, -0.000715645, -1, 0, 0, 0, 1, -5.40465, 2.41832, -0.0365565 )

[node name="CollisionShape" type="CollisionShape" parent="forearm_r"]
shape = SubResource( 4 )

[node name="phys_player_forearm" parent="forearm_r" instance=ExtResource( 2 )]

[node name="hand_r" type="RigidBody" parent="."]
transform = Transform( -1, 0.000715645, 0, -0.000715645, -1, 0, 0, 0, 1, -7.2218, 2.43618, -0.0501633 )
collision_layer = 2
collision_mask = 0
mass = 9.23

[node name="MeshInstance" type="MeshInstance" parent="hand_r"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="hand_r"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 6 )

[node name="HandRCollision" type="Area" parent="hand_r"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="hand_r/HandRCollision"]
shape = SubResource( 7 )

[node name="FOREARMR->HANDR" type="PinJoint" parent="."]
transform = Transform( -1, 0.000715645, 0, -0.000715645, -1, 0, 0, 0, 1, -6.54303, 2.43294, -0.0250816 )
nodes/node_a = NodePath("../forearm_r")
nodes/node_b = NodePath("../hand_r")

[node name="BODY->UPPERR" type="PinJoint" parent="."]
transform = Transform( -1, 0.000715645, 0, -0.000715645, -1, 0, 0, 0, 1, -1.96727, 2.40805, -0.0250816 )
nodes/node_a = NodePath("../body")
nodes/node_b = NodePath("../upperarm_r")
collision/exclude_nodes = false

[node name="UPPERR-FOREARMR" type="PinJoint" parent="."]
transform = Transform( -1, 0.000715645, 0, -0.000715645, -1, 0, 0, 0, 1, -4.24702, 2.34922, -0.0250816 )
nodes/node_a = NodePath("../upperarm_r")
nodes/node_b = NodePath("../forearm_r")

[connection signal="body_entered" from="hand_l/HandLCollision" to="." method="_on_HandLCollision_body_entered"]
[connection signal="body_entered" from="hand_r/HandRCollision" to="." method="_on_HandRCollision_body_entered"]
